HW3 alignment fix

--- a/hw/hw3/css/styles.css
+++ b/hw/hw3/css/styles.css
@@ -30,8 +30,10 @@ img {
 
 #elephant {
     border:4px solid #021a40;
-    position: absolute;
-    left: 840px;
+}
+
+#elephantFormat, #buttonFormat {
+    text-align: center;
 }
 #maracas {
     position: fixed;
@@ -74,8 +76,6 @@ option {
 }
 
 input[type=submit] {
-    left:930px;
-    position: absolute;
     font-family: 'Rammetto One', cursive;
     background: #c5d8f7;
     border: solid;
